--- a/app/views/student/index.html.erb
+++ b/app/views/student/index.html.erb
@@ -1,16 +1,19 @@
-<h1>Listing students</hq>
+<h1>Список Студентов <%=@student.numb</h1>
 <table>
     <tr>
-        <th>Name</th>
+        <th>Ф.И.О</th>
     </tr>
-<% for student in @student %>
+<% for student in @students %>  
     <tr>
         <td><%=h student.name %></td>
-        <td><%= link_to 'Показать', student %></td>
-        <td><%= link_to 'Корректировать',edit_student_path(student) %></td>
-        <td><%= link_to 'Удалить', student, :confirm => 'Уверены?',:method => :destroy %></td>
-    </tr>
-<% end %>
-</table>
-<br />
+       <td><%= link_to 'Показать', group_student_path(@group, student) %></td>
+       <td><%= link_to 'Изменить', edit_group_student_path(@group, student) %></td>
+       <td><%= link_to 'Удалить', group_student_path(@group, student), :confirm => 'Точно?', :method => :delete %>
+       </td>
+      </tr>
+ <% end %>
+ </table> 
+   <br />
+ <%= link_to 'Зачислить студента', new_group_student_path(@group) %> 
+ <%= link_to 'Назад к группе', @group %> 
 
