--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.error_messages %> 
 
   <p>
-    <%= f.label :numb %><br /> 
+    <%= f.label :Номер_группы %><br /> 
     <%= f.text_field :numb %> 
   </p>
  
