--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -2,11 +2,11 @@
  <% form_for([@group, @student]) do |f| %> 
  <%= f.error_messages %>
  <p>
- <%= f.label :name %><br />
+ <%= f.label :Фамилия_Имя_Отчество %><br />
  <%= f.text_field :name %>
  </p>
  <p>
- <%= f.label :info %><br />
+ <%= f.label :Краткая_информация %><br />
  <%= f.text_field :info %>
  </p>
  <p>
