--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -3,5 +3,10 @@
  <%=h @student.name %>
  </p>
 
+<p>
+ <b>Краткая информация:</b> 
+ <%=h @student.info %>
+ </p>
+
  <%= link_to 'Редактировать', edit_group_student_path(@group, @student) %> |
  <%= link_to 'Назад', group_students_path(@group) %> 
