--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -19,4 +19,5 @@
 
 <%= link_to 'Редактировать группу', edit_group_path(@group) %> |
  <%= link_to 'Назад к группам', groups_path %> |
- <%= link_to 'Управление студентами', group_students_path(@group) %> 
+ <%= link_to 'Управление студентами', group_students_path(@group) %> |
+ <%= link_to 'Дисциплины', disciplines_path %> |
