--- a/app/views/lecturers/show.html.erb
+++ b/app/views/lecturers/show.html.erb
@@ -13,5 +13,6 @@
 </p>
 
 
-<%= link_to 'Редактировать', edit_discipline_lecturer_path(@discipline, @lecturer) %> |
-<%= link_to 'Назад', discipline_lecturers_path(@discipline) %>
+<%= link_to 'Показать', group_lecturers_path(@group) %> |
+<%= link_to 'Редактировать', edit_group_lecturer_path(@group, @lecturer) %> |
+<%= link_to 'Назад', group_lecturers_path(@group) %>
