--- a/app/views/disciplines/new.html.erb
+++ b/app/views/disciplines/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Новая дисциплина</h1>
 
-<% form_for(@discipline) do |f| %>
+<% form_for([@group, @discipline]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -13,4 +13,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Назад', disciplines_path %>
+<%= link_to 'Назад к списку групп', group_disciplines_path (@group) %>
