--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -17,7 +17,10 @@
  <% end %> 
 
 
+
 <%= link_to 'Редактировать группу', edit_group_path(@group) %> |
- <%= link_to 'Назад к группам', groups_path %> |
- <%= link_to 'Управление студентами', group_students_path(@group) %> |
- <%= link_to 'Дисциплины', disciplines_path %> |
+ <%= link_to 'Назад к списку групп', groups_path %> |
+ <%= link_to 'Управление студентами', group_students_path(@group) %>
+<p> 
+ <%= link_to 'Дисциплины', group_disciplines_path (@group) %> 
+</p>
