--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,10 +3,9 @@
     <tr>
         <th>Номер группы</th>
     </tr>
-<% @groups.each do |group| %> 
+      <% @groups.each do |group| %> 
     <tr>
-        <td><%=h group.numb %></td>
-       <td><%= link_to 'Показать', group %></td>
+       <td><%= link_to group.numb, group %></td>
        <td><%= link_to 'Изменить', edit_group_path(group) %></td>
        <td><%= link_to 'Удалить', group, :confirm => 'Точно?', :method => :delete %></td>
        </tr> <% end %> </table> 
