--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -6,8 +6,16 @@
  <%= f.text_field :name %>
  </p>
  <p>
- <%= f.label :Краткая_информация %><br />
+ <%= f.label :Номер_паспорта %><br />
  <%= f.text_field :info %>
+ </p>
+<p>
+ <%= f.label :Дата_рождения %><br />
+ <%= f.text_field :data %>
+ </p>
+<p>
+ <%= f.label :Место_рождения %><br />
+ <%= f.text_field :from %>
  </p>
  <p>
  <%= f.submit "Обновить" %> 
