--- a/app/views/students/html.erb
+++ b/app/views/students/html.erb
@@ -13,6 +13,11 @@
         <%= f.label :info %>:
         <%= f.text_field :info %>
 
+        <%= f.label :data %>:
+        <%= f.text_field :data %>
+ 
+        <%= f.label :from %>:
+        <%= f.text_field :from %>
 
         <%= f.submit "Добавить студента", :class => "submit" %>
 
