--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -7,17 +7,16 @@
 
 <% for discipline in @disciplines %>
   <tr>
-    <td><%=h discipline.name %></td>
-    <td><%= link_to 'Показать', group_discipline_path (@group, discipline) %></td>
+    <td><%= link_to discipline.name , group_discipline_path (@group, discipline) %></td>
+    <td><%= link_to 'Преподаватели', discipline_lecturers_path(discipline) %></td>
+    <td><%= link_to 'Отчетность', discipline_reportings_path(discipline) %> | </td> 
     <td><%= link_to 'Редактировать', edit_group_discipline_path (@group, discipline) %></td>
     <td><%= link_to 'Удалить', group_discipline_path (@group, discipline), :confirm => 'Вы уверены?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
- <%= link_to 'Преподаватели', group_lecturers_path(@group) %> |
- <%= link_to 'Отчетность', group_reportings_path(@group) %> 
+
 <br />
 <%= link_to 'Новая дисциплина', new_group_discipline_path (@group) %> |
 <%= link_to 'Назад к списку групп', groups_path %>
