--- a/app/views/reportings/show.html.erb
+++ b/app/views/reportings/show.html.erb
@@ -1,8 +1,9 @@
 <p>
   <b>Вид отчетности:</b>
   <%=h @reporting.rtype %>
-</p>
+</p><p>
+  <b>Предмет: </b>
+  <%=h @discipline.name %> </p>
 
-   <%= link_to 'Показать', group_reportings_path (@group) %> |
-<%= link_to 'Редактировать', edit_group_reporting_path(@group, @reporting) %> |
-<%= link_to 'Назад', group_reportings_path(@group) %>
+<%= link_to 'Редактировать', edit_discipline_reporting_path(@discipline, @reporting) %> |
+<%= link_to 'Назад', discipline_reportings_path(@discipline) %>
