--- a/app/views/lecturers/edit.html.erb
+++ b/app/views/lecturers/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Редактирование</h1>
 
-<% form_for([@group, @lecturer]) do |f| %>
+<% form_for([@discipline, @lecturer]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -28,14 +28,12 @@
 <%= label_tag(:labtype, "лабораторные") %> 
   </p>
   <p>
-    <%= f.label :Дисциплина %><br />
-    <%= disciplines_select('lecturer[discipline_id]', @group.id) %>
+<% @lecturer.discipline_id == @discipline.id %>
   </p>
   <p>
     <%= f.submit 'Сохранить изменения' %>
   </p>
 <% end %>
 
-
-<%= link_to 'Показать', group_lecturer_path (@group, @lecturer) %> |
-<%= link_to 'Назад', group_lecturers_path (@group) %>
+<%= link_to 'Показать', discipline_lecturer_path (@discipline, @lecturer) %> |
+<%= link_to 'Назад', discipline_lecturers_path (@discipline) %>
