--- a/app/views/reportings/index.html.erb
+++ b/app/views/reportings/index.html.erb
@@ -1,17 +1,23 @@
-<h1>Виды отчетности</h1>
+<h1>Виды отчетности по дисциплине <%=h @discipline.name %></h1>
 
 <table>
+  <tr>
+    <th>Отчетность</th>
 
+  </tr>
 <% for reporting in @reportings %>
   <tr>
     <td><%=h reporting.rtype %></td>
-    <td><%= link_to 'Редактировать', edit_group_reporting_path (@group, reporting) %></td>
-    <td><%= link_to 'Удалить', group_reporting_path (@group, reporting), :confirm => 'Вы уверены?', :method => :delete %></td>
+
+    <td><%= link_to 'Редактировать', edit_discipline_reporting_path (@discipline, reporting) %></td>
+    <td><%= link_to 'Удалить', discipline_reporting_path (@discipline, reporting), :confirm => 'Вы уверены?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
+<% @group = @discipline.group_id %>
+
 <br />
 
- <%= link_to 'Добавить', new_group_reporting_path(@group) %> |
-<%= link_to 'Назад к списку групп', groups_path  %> 
+ <%= link_to 'Добавить отчетность', new_discipline_reporting_path(@discipline) %> |
+<%= link_to 'Назад к списку дисциплин', group_disciplines_path (@group) %> 
