--- a/app/views/reportings/new.html.erb
+++ b/app/views/reportings/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Новая отчетность</h1>
 
-<% form_for([@group, @reporting]) do |f| %>
+<% form_for([@discipline, @reporting]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -8,12 +8,11 @@
     <%= f.text_field :rtype %>
   </p>
   <p>
-<%= f.label :Дисциплина %><br />
-  <%= disciplines_select('reporting[discipline_id]', @group.id) %>
+<% @reporting.discipline_id == @discipline.id %>
   </p>
   <p>
     <%= f.submit 'Создать' %>
   </p>
 <% end %>
 
-<%= link_to 'Назад', group_reportings_path (@group) %>
+<%= link_to 'Назад', discipline_reportings_path (@discipline) %>
