--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Список групп</hq>
-<table>
+<h1 align="center">Список групп</h1>
+<table align="center", border = 1 >
     <tr>
         <th>Номер</th>
     </tr>
