--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,12 +1,14 @@
-<h1>Редактирование группы</h1>
+<h1 align="center">Редактирование группы</h1>
  <% form_for(@group) do |f| %> 
  <%= f.error_messages %>
- <p>
- <%= f.label :numb %><br />
+ <p align="center">
+ <%= f.label :Номер_группы %><br />
  <%= f.text_field :numb %>
  </p>
- <p>
+ <p align="center">
  <%= f.submit "Обновить" %> 
  </p>
+<p align="center">
  <% end %> <%= link_to 'Показать', @group %> | 
  <%= link_to 'Назад', groups_path %> 
+<p>
