--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,12 +1,14 @@
-<h1>Новая группа</h1>
+<h1 align="center">Новая группа</h1>
  <% form_for(@group) do |f| %>
   <%= f.error_messages %> 
 
-  <p>
+  <p align="center">
     <%= f.label :Номер_группы %><br /> 
     <%= f.text_field :numb %> 
   </p>
  
-  <p>
+  <p align="center">
      <%= f.submit "Создать" %> 
-  </p> <% end %> <%= link_to 'Назад', groups_path %> 
+  </p>
+ <% end %>
+<p align="center"> <%= link_to 'Назад', groups_path %> </p>
