--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,26 +1,41 @@
-<p>
+<h1 align="center">
  <b>Номер группы:</b> 
  <%=h @group.numb %>
- </p>
+ </h1>
 
 
-<h2>Студенты</h2> 
-<% k=0 %>
-<% @group.students.each do |c| %>
-<% k+=1 %>
- <p>
-<b>  <%=h k %>)</b> 
- <%=h c.name %>
- </p> 
+<h2 align="center">Студенты</h2> 
 
 
- <% end %> 
+<table border=1,  align="center">
+          <% k=0 %>
+           <tr>    
+                <th align ="left">№</th>
+		<th align="left">Фамилия</th>
+		<th align="left">Имя</th>
+                <th align="left">Отчество</th>
+            </tr>
+    
+            <% @group.students.each do |c| %>
+            <% k+=1 %>
+            <tr>
+                <td> <%=h k %>         </td> 
+                <td> <%=h c.surname %> </td>
+                <td> <%=h c.name %>    </td> 
+                <td> <%=h c.lastname %></td>
+           </tr>
+       <% end %>      
+</table>
+ <br />
 
 
 
+
+ <p align="center">
 <%= link_to 'Редактировать группу', edit_group_path(@group) %> |
  <%= link_to 'Назад к списку групп', groups_path %> |
  <%= link_to 'Управление студентами', group_students_path(@group) %>
-<p> 
+</p>
+<p align="center"> 
  <%= link_to 'Дисциплины', group_disciplines_path (@group) %> 
 </p>
