--- a/app/views/layouts/reportings.html.erb
+++ b/app/views/layouts/reportings.html.erb
@@ -1,17 +1,38 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+  <%= stylesheet_link_tag :all %> 
+  <%= javascript_include_tag :defaults %> 
+<tr align="center">
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Reportings: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+  <title>Groups: <%= controller.action_name %></title>
 </head>
-<body>
 
-<p style="color: green"><%= flash[:notice] %></p>
+<body style="background: #FFFFF0;"> 
+		<table width="100%" border="0">
+			<tr align="center" style="background-color: #66CDAA;">
+				<td colspan="3">
+					<div class="users-form"><fieldset><a href="/"><h1>Университет</h1></a></fieldset></div>
+				</td>
+			</tr>
+			<tr valign="top" >
+				<td align="left" >
+					<table align="left" >
 
-<%= yield %>
+						<h3> <a href="/">Об университете</a></h3> 
+ 						<h3> Студентам: </h3>
+                  				<h3> <%= link_to 'Информация об учащихся', groups_path %></h3> 
+                  				<h3> <a href="/">Расписание</a></h3> 
+                  				<h3> <a href="/">Объявления</a></h3> 
+                  				<h3> <%= link_to 'Информация о преподавателях', contracts_path %></h3> 
+                  				<h3> <a href="/">Новости университета</a></h3> 
+					</table>
+				</td>
+				<td align="center" width=100%>
+					<p style="color: green"><%= flash[:notice] %></p>
+					<%= yield %>
+				</td>
 
-</body>
+			</tr>
+		</table>
+	</body>
 </html>
