--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,9 +1,8 @@
-
-<h1 align="center">Список групп</hq>
-<table align="center", border = 1>
+<h1 >Список групп</hq> <br /><br />
+<table border = 1>
     <tr>
         <th>Номер группы</th>
-        <th>Дейсвтия</th>
+        <th>Действия</th>
     </tr>
       <% @groups.each do |group| %> 
     <tr>
@@ -12,4 +11,5 @@
        <%= link_to 'Удалить', group, :confirm => 'Точно?', :method => :delete %></td>
        </tr> <% end %> </table> 
    <br />
- <%= link_to 'Новая группа', new_group_path %> 
+ <%= link_to 'Новая группа', new_group_path %>    <br />
+
