--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,25 +1,24 @@
-<h1 align="center">Зачисление студента</h1>
+<h1>Зачисление студента</h1>
  <% form_for([@group,@student]) do |f| %>
   <%= f.error_messages %> 
 
- <p align="center">
+  <p>
     <%= f.label :Фамилия %><br />
     <%= f.text_field :surname %>
   </p>
-  <p align="center">
+  <p>
     <%= f.label :Имя %><br />
     <%= f.text_field :name %>
   </p>
-  <p align="center">
+  <p>
     <%= f.label :Отчество %><br />
     <%= f.text_field :lastname %>
   </p>
- <p align="center">
- <p align="center">
+ <p>
     <%= f.label :Номер_паспорта %><br /> 
     <%= f.text_field :info %>
 </p>
-<p  align="center">
+<p>
 <%= f.select(:bday, [['1', 1],['2', 2],['3', 3],['4', 4],['5', 5],['6', 6],['7', 7],['8', 8],['9', 9],['10', 10],
 ['11', 11],['12', 12],['13', 13],['14', 14],['15', 15],['16', 16],['17', 17],['18', 18],['19', 19],
 ['20', 20],['21', 21],['22', 22],['23', 23],['24', 24],['25', 25],['26', 26],['27', 27],['28', 28],['29', 29],['30', 30],['31', 31]])%>
@@ -29,11 +28,11 @@
 </p>
 <br /><br />
 
- <p align="center">
+ <p>
     <%= f.label :Место_рождения %><br /> 
     <%= f.text_field :from %>
 </p>
-  <p align="center">
+  <p>
      <%= f.submit "Зачислить" %> 
   </p> 
 <% end %>
